configurable remove behaviour for array iterators